# aiogram-multibot-example

./: README.md  bot.py  polling_manager.py  pyproject.toml
